--- a/frontend-bar/src/index.html
+++ b/frontend-bar/src/index.html
@@ -2,10 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>FrontendBar</title>
+  <title>The hollow bar</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="./assets/img/LOGO BAR/BAR BRANDON-01.png" rel="icon" sizes="32x32">
+  <link href="./assets/img/LOGO BAR/BAR BRANDON-01.png" rel="apple-touch-icon" sizes="32x32">
 </head>
 <body>
   <app-root></app-root>
