--- a/frontend-bar/src/index.html
+++ b/frontend-bar/src/index.html
@@ -5,8 +5,7 @@
   <title>The hollow bar</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./assets/img/LOGO BAR/BAR BRANDON-01.png" rel="icon" sizes="32x32">
-  <link href="./assets/img/LOGO BAR/BAR BRANDON-01.png" rel="apple-touch-icon" sizes="32x32">
+  <link rel="icon" href="./assets/img/LOGO BAR/BAR BRANDON-01.ico" sizes="16x16">
 </head>
 <body>
   <app-root></app-root>
