--- a/frontend-bar/src/index.html
+++ b/frontend-bar/src/index.html
@@ -5,7 +5,7 @@
   <title>The hollow bar</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="./assets/img/LOGO BAR/BAR BRANDON-01.ico" sizes="16x16">
+  <link rel="icon" href="./assets/img/LOGO BAR/bran2-01.png">
 </head>
 <body>
   <app-root></app-root>
