--- a/frontend-bar/src/index.html
+++ b/frontend-bar/src/index.html
@@ -6,8 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="./assets/img/LOGO BAR/bran2-01.png">
+
 </head>
 <body>
+  <style>body{margin: 0; width: 100%;}</style>
   <app-root></app-root>
 </body>
 </html>
