--- a/frontend-bar/src/index.html
+++ b/frontend-bar/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="./assets/img/LOGO BAR/bran2-01.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="./assets/js/nav/nav.js"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
